# mls

./: LICENSE  Makefile  README.md  pyproject.toml
libs/: plots.py  syn_datasets.py
models/: bayesian_linear_regressor.py  exact_gplvm.py  kernel_regressor.py  linear_regressor.py  logistic_regressor.py  multiclass_logistic_regressor.py  rff_regressor.py
notebooks/: binomial_classification.ipynb  gaussian_process_latent_varible_models.ipynb  multiclass_classification.ipynb  rff_regression.ipynb
